<resources>
    <string name="app_name">Shivagaṅge</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">SHIVAGAṄGE</string>
    <string name="backdrop_subtitle">Sri Sringeri Shivaganga Mutt</string>
    <string name="audio_source_server">http://192.155.224.66/stage/files/shivagange/128/</string>
    <string name="home_page_header">Sri Sringeri Shivaganga Mutt</string>
    <string name="home_page_author">Sri Vishweshwarananda Bharati Swamiji</string>
    <string name="home_page_para1">Sri Sringeri Shivaganga Mutt, a shaka of the Sringeri Sharada Peetam, was established by the 24th Acharya of Sharada Peetam Sri Abhinava Narasimha Bharathi Mahaswamigal in the 17th century.</string>
    <string name="home_page_para2">Listen to stotras composed by His Holiness Sri Sri Vishweshwarananda Bharati Swamiji, the 17th peethadhipati of Sri Sringeri Shivaganga parampara.</string>
    <string name="home_page_para3">This app is brought to you by\nSri Sachchidananda Pratishthana</string>
    <string name="title_activity_about">About</string>
    <string name="about_para1">Sri Marti Venkatesha Shastry, was well versed in shastras, and  belonged to a vaidika sampradaya family of Guntur ,Andhra Pradesh. Under the instructions of the Jagadguru of Sringeri, he was initiated to sanyasa at Sringeri in 1969, and Shivaganga Shankara Math Peethadhipati Sri Sacchidananda Subrahmanya Bharati accepted him as his successor, with the Yogapatta, Sri Vishveshwarananda Bharati. Writing of Dharmic books was very facile to Sri Vishveshwarananda Bharati and he composed many beautiful kritis in Sanskrit, most notably, perhaps the first Suprabhata for Bhagavatpada Sri Shankaracharya. He served His guru for 8 years and when His Guru shed His mortal coil and attained videha mukti on 26-5-77 in Bangalore,  Sri Vishveshwarananda Bharati adorned the Shivaganga peetham.  He attained videha mukti on 25-10-82, and was succeeded by `Anushtaana Chakravarthy' Sri Sacchidananda Bharati. </string>
    <string name="about_para2">In this collection there are four compositions of Sri Vishveshwarananda Bharati mellifluously rendered by Vidwan S Shankar</string>

</resources>
